force-app/main/default/objects/ChargeMap__c/ChargeMap__c.object-meta.xml
<CustomObject>
    <label>Charge Map</label>
    <nameField>
        <label>Charge Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>