force-app/main/default/objects/ChargeMap__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account paying for this Charge Map. Can be different from End User.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charge Maps (Paying account)</relationshipLabel>
    <relationshipName>Charge_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>