force-app/main/default/objects/ChargeMap__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Sum of all Charge Map Items amounts.</inlineHelpText>
    <label>Amount</label>
    <summarizedField>ChargeMapItem__c.Amount__c</summarizedField>
    <summaryForeignKey>ChargeMapItem__c.ChargeMap__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>