force-app/main/default/objects/ChargeMap__c/fields/Amount_TTC__c.field-meta.xml
<CustomField>
    <fullName>Amount_TTC__c</fullName>
    <label>Amount TTC</label>
    <summarizedField>ChargeMapItem__c.Amount_TTC__c</summarizedField>
    <summaryForeignKey>ChargeMapItem__c.ChargeMap__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>