force-app/main/default/objects/ChargeMap__c/fields/AutoRenewal__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewal__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checked if the customer must be renewed automatically at the end of the Rev Rec period (End date). If so, a new Charge Map will be generated.</inlineHelpText>
    <label>Auto renewal</label>
    <type>Checkbox</type>
</CustomField>