force-app/main/default/objects/ChargeMap__c/fields/BacklogItems__c.field-meta.xml
<CustomField>
    <fullName>BacklogItems__c</fullName>
    <label>BacklogItems</label>
    <summaryFilterItems>
        <field>ChargeMapItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </summaryFilterItems>
    <summaryForeignKey>ChargeMapItem__c.ChargeMap__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>