force-app/main/default/objects/ChargeMap__c/fields/BillableDate__c.field-meta.xml
<CustomField>
    <fullName>BillableDate__c</fullName>
    <inlineHelpText>Date when the Charge Map was put in Billable status</inlineHelpText>
    <label>Billable date</label>
    <type>Date</type>
</CustomField>