force-app/main/default/objects/ChargeMap__c/fields/Billed_ARR__c.field-meta.xml
<CustomField>
    <fullName>Billed_ARR__c</fullName>
    <label>Billed ARR</label>
    <summarizedField>ChargeMapItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>ChargeMapItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Facturable</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ChargeMapItem__c.SalesOrderID__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ChargeMapItem__c.Nature__c</field>
        <operation>equals</operation>
        <value>Usage</value>
    </summaryFilterItems>
    <summaryForeignKey>ChargeMapItem__c.ChargeMap__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>