force-app/main/default/objects/ChargeMap__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>Billing address</label>
    <type>Address</type>
</CustomField>