force-app/main/default/objects/ChargeMap__c/fields/BillingBusinessName__c.field-meta.xml
<CustomField>
    <fullName>BillingBusinessName__c</fullName>
    <label>Billing Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>