force-app/main/default/objects/ChargeMap__c/fields/BillingConditions__c.field-meta.xml
<CustomField>
    <fullName>BillingConditions__c</fullName>
    <label>Billing conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>