force-app/main/default/objects/ChargeMap__c/fields/BillingContact__c.field-meta.xml
<CustomField>
    <fullName>BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Charge Maps</relationshipLabel>
    <relationshipName>Charge_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>