force-app/main/default/objects/ChargeMap__c/fields/BillingDepartment__c.field-meta.xml
<CustomField>
    <fullName>BillingDepartment__c</fullName>
    <label>Billing Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>