force-app/main/default/objects/ChargeMap__c/fields/BillingInstructions__c.field-meta.xml
<CustomField>
    <fullName>BillingInstructions__c</fullName>
    <label>Billing instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>