force-app/main/default/objects/ChargeMap__c/fields/CashCollectionContact__c.field-meta.xml
<CustomField>
    <fullName>CashCollectionContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash collection contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Charge Maps (Cash collection contact)</relationshipLabel>
    <relationshipName>Charge_Maps1</relationshipName>
    <type>Lookup</type>
</CustomField>