force-app/main/default/objects/ChargeMap__c/fields/CeligoExport__c.field-meta.xml
<CustomField>
    <fullName>CeligoExport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CeligoExport</label>
    <type>Checkbox</type>
</CustomField>