force-app/main/default/objects/ChargeMap__c/fields/ChannelPartnerAssociated__c.field-meta.xml
<CustomField>
    <fullName>ChannelPartnerAssociated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel partner associated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charge Maps (Channel partner associated)</relationshipLabel>
    <relationshipName>Charge_Maps2</relationshipName>
    <type>Lookup</type>
</CustomField>