force-app/main/default/objects/ChargeMap__c/fields/ContractDurationInYears__c.field-meta.xml
<CustomField>
    <fullName>ContractDurationInYears__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contract duration (in years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>