force-app/main/default/objects/ChargeMap__c/fields/Date_ODS__c.field-meta.xml
<CustomField>
    <fullName>Date_ODS__c</fullName>
    <label>Date ODS</label>
    <type>Date</type>
</CustomField>