force-app/main/default/objects/ChargeMap__c/fields/EndDateRevRec__c.field-meta.xml
<CustomField>
    <fullName>EndDateRevRec__c</fullName>
    <formula>DATE(YEAR(StartDateRevRec__c), 12, 31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End date - Rev Rec</label>
    <type>Date</type>
</CustomField>