force-app/main/default/objects/ChargeMap__c/fields/EndUser__c.field-meta.xml
<CustomField>
    <fullName>EndUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End user associated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charge Maps (End user)</relationshipLabel>
    <relationshipName>Charge_Maps1</relationshipName>
    <type>Lookup</type>
</CustomField>