force-app/main/default/objects/ChargeMap__c/fields/ETT_Price_Catalog__c.field-meta.xml
<CustomField>
    <fullName>ETT_Price_Catalog__c</fullName>
    <label>ETT Price Catalog</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalogue Pack ETT - ETTi Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - ETTi Mensuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Light Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Light Mensuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Light NC Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Light NC Mensuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Premium Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Premium Mensuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Premium NC Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Premium NC Mensuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Standard Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Standard Mensuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Standard NC Annuel</fullName>
            </value>
            <value>
                <fullName>Catalogue Pack ETT - Standard NC Mensuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>