force-app/main/default/objects/ChargeMap__c/fields/ETTBillingSchedule__c.field-meta.xml
<CustomField>
    <fullName>ETTBillingSchedule__c</fullName>
    <label>ETT Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annuelle</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Mensuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>