force-app/main/default/objects/ChargeMap__c/fields/InvoiceSendingMethod__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSendingMethod__c</fullName>
    <label>Invoice sending method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>E-Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>