force-app/main/default/objects/ChargeMap__c/fields/Missing_PO_on_Items__c.field-meta.xml
<CustomField>
    <fullName>Missing_PO_on_Items__c</fullName>
    <label>Missing PO on Items</label>
    <summaryFilterItems>
        <field>ChargeMapItem__c.PO_Reference__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>ChargeMapItem__c.ChargeMap__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>