force-app/main/default/objects/ChargeMap__c/fields/NewChargeMap__c.field-meta.xml
<CustomField>
    <fullName>NewChargeMap__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Charge Map</label>
    <referenceTo>ChargeMap__c</referenceTo>
    <relationshipLabel>Charge Maps (Previous Charge Map)</relationshipLabel>
    <relationshipName>Charge_Maps1</relationshipName>
    <type>Lookup</type>
</CustomField>