force-app/main/default/objects/ChargeMap__c/fields/NumberOfRenewalsLeft__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRenewalsLeft__c</fullName>
    <label>Number Of Renewals Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>