force-app/main/default/objects/ChargeMap__c/fields/Pb_On_Items_PO__c.field-meta.xml
<CustomField>
    <fullName>Pb_On_Items_PO__c</fullName>
    <formula>TEXT( PO_Required__c )= &quot;Yes&quot; &amp;&amp; Missing_PO_on_Items__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pb On Items PO</label>
    <type>Checkbox</type>
</CustomField>