force-app/main/default/objects/ChargeMap__c/fields/PlatformLink__c.field-meta.xml
<CustomField>
    <fullName>PlatformLink__c</fullName>
    <inlineHelpText>Provide the Platform link when invoice sending method is Platform.</inlineHelpText>
    <label>Platform link</label>
    <type>Url</type>
</CustomField>