force-app/main/default/objects/ChargeMap__c/fields/PurchaseOrderReference__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderReference__c</fullName>
    <inlineHelpText>Required when Purchase Order Required is set to True</inlineHelpText>
    <label>Purchase Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>