force-app/main/default/objects/ChargeMap__c/fields/PurchaseOrderRequestDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderRequestDate__c</fullName>
    <inlineHelpText>Date when the Purchase Order was requested to the customer.</inlineHelpText>
    <label>Purchase Order Request Date</label>
    <type>Date</type>
</CustomField>