force-app/main/default/objects/ChargeMap__c/fields/PurchaseOrderRequired__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if a Purchase Order is required for this customer.</inlineHelpText>
    <label>Purchase Order required?</label>
    <type>Checkbox</type>
</CustomField>