force-app/main/default/objects/ChargeMap__c/fields/RenewedChargeMap__c.field-meta.xml
<CustomField>
    <fullName>RenewedChargeMap__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New Charge Map if it was eligible for renewal</inlineHelpText>
    <label>Renewed Charge Map</label>
    <referenceTo>ChargeMap__c</referenceTo>
    <relationshipLabel>Charge Maps</relationshipLabel>
    <relationshipName>Charge_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>