force-app/main/default/objects/ChargeMap__c/fields/SendInvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>SendInvoiceTo__c</fullName>
    <label>Send invoice to</label>
    <type>Email</type>
</CustomField>