force-app/main/default/objects/ChargeMap__c/fields/ShippingBusinessName__c.field-meta.xml
<CustomField>
    <fullName>ShippingBusinessName__c</fullName>
    <label>Shipping Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>