force-app/main/default/objects/ChargeMap__c/fields/ShippingDepartment__c.field-meta.xml
<CustomField>
    <fullName>ShippingDepartment__c</fullName>
    <label>Shipping Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>