force-app/main/default/objects/ChargeMap__c/fields/StartDateRevRec__c.field-meta.xml
<CustomField>
    <fullName>StartDateRevRec__c</fullName>
    <inlineHelpText>Revenue recognition start date for this Charge Map.</inlineHelpText>
    <label>Start date - Rev Rec</label>
    <type>Date</type>
</CustomField>