force-app/main/default/objects/ChargeMap__c/fields/TotalAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountPaid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total amount paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>