force-app/main/default/objects/ChargeMap__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Charge Map Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New business</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Cross-sell/Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>