force-app/main/default/objects/ChargeMap__c/recordTypes/Carerix.recordType-meta.xml
<RecordType>
    <fullName>Carerix</fullName>
    <active>true</active>
    <label>Carerix</label>
</RecordType>