force-app/main/default/objects/ChargeMap__c/recordTypes/Pixid_Corp.recordType-meta.xml
<RecordType>
    <fullName>Pixid_Corp</fullName>
    <active>true</active>
    <label>Pixid Corp</label>
</RecordType>