force-app/main/default/objects/ChargeMap__c/recordTypes/Pixid_LTD_UK.recordType-meta.xml
<RecordType>
    <fullName>Pixid_LTD_UK</fullName>
    <active>true</active>
    <label>Pixid LTD (UK)</label>
</RecordType>