force-app/main/default/objects/ChargeMap__c/recordTypes/Pixid_NV_Belgique.recordType-meta.xml
<RecordType>
    <fullName>Pixid_NV_Belgique</fullName>
    <active>true</active>
    <label>Pixid NV (Belgique)</label>
</RecordType>