force-app/main/default/objects/ChargeMap__c/recordTypes/Pixid_SAS_France.recordType-meta.xml
<RecordType>
    <fullName>Pixid_SAS_France</fullName>
    <active>true</active>
    <label>Pixid SAS (France)</label>
</RecordType>