force-app/main/default/objects/ChargeMap__c/recordTypes/TheMatchBox.recordType-meta.xml
<RecordType>
    <fullName>TheMatchBox</fullName>
    <active>true</active>
    <label>TheMatchBox</label>
</RecordType>