force-app/main/default/objects/ChargeMap__c/recordTypes/Vector_VMS.recordType-meta.xml
<RecordType>
    <fullName>Vector_VMS</fullName>
    <active>true</active>
    <label>Vector VMS</label>
</RecordType>