force-app/main/default/objects/ChargeMap__c/validationRules/End_User_Associated_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>End_User_Associated_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Account__r.Sous_type__c, &quot;Supplier agency&quot;),
  ISPICKVAL(SourceOpportunity__r.ChannelType__c, &quot;Indirect&quot;),
  ISBLANK(EndUser__c)
)</errorConditionFormula>
    <errorDisplayField>EndUser__c</errorDisplayField>
    <errorMessage>End user associated is mandatory</errorMessage>
</ValidationRule>