force-app/main/default/objects/ChargeMap__c/validationRules/Platform_Link_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Platform_Link_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( InvoiceSendingMethod__c , &quot;Platform&quot;),
    ISBLANK(PlatformLink__c)
)</errorConditionFormula>
    <errorDisplayField>PlatformLink__c</errorDisplayField>
    <errorMessage>Please provide the platform link.</errorMessage>
</ValidationRule>