force-app/main/default/objects/ChargeMap__c/validationRules/Provide_Email_For_Invoices.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_Email_For_Invoices</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( InvoiceSendingMethod__c , &quot;Email&quot;),
    ISBLANK(SendInvoiceTo__c)
)</errorConditionFormula>
    <errorDisplayField>SendInvoiceTo__c</errorDisplayField>
    <errorMessage>Please provide the billing email.</errorMessage>
</ValidationRule>