force-app/main/default/objects/ChargeMap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SourceOpportunity__c</columns>
    <columns>AutoRenewal__c</columns>
    <columns>PO_Required__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>