force-app/main/default/objects/ChargeMap__c/listViews/Pixid_FR_Direct_EU_Chargemap.listView-meta.xml
<ListView>
    <fullName>Pixid_FR_Direct_EU_Chargemap</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SourceOpportunity__c</columns>
    <columns>AutoRenewal__c</columns>
    <columns>PO_Required__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>PurchaseOrderRequired__c</columns>
    <columns>PO_Frequency__c</columns>
    <columns>ChannelPartnerAssociated__c</columns>
    <columns>InvoiceSendingMethod__c</columns>
    <columns>SendInvoiceTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>AAC,CGO,GTZ</value>
    </filters>
    <label>Pixid FR - CSM - Chargemap</label>
</ListView>